--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -9,6 +9,6 @@
         <button ng-click="$ctrl.login()">Login</button>
     </div>
     <div>
-        Don't have an account yet? <a href="#!/signin/">Signin</a>
+        Don't have an account yet? <a href="#!/signup/">Signup</a>
     </div>
 </div>
