--- a/app/signup/signup.component.html
+++ b/app/signup/signup.component.html
@@ -12,7 +12,7 @@
         The passwords does not match    
     </div>
     <div>
-        <button ng-click="$ctrl.signin()">Signin</button>
+        <button ng-click="$ctrl.signup()">Signup</button>
     </div>
     <div>
         Already have an account? <a href="#!/login/">Login</a>
