--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,12 +1,13 @@
 <div>
     <div>User sessions:</div>
+    <div ng-if="$ctrl.userSessionsError">An error have been occurs. Try it later</div>
     <div ng-if="$ctrl.userSessions">
         <table>
             <thead>
                 <th>Last sessions</th>
             </thead>
             <tr ng-repeat="userSession in $ctrl.userSessions">
-                <td>{{userSession.sessionDate}}</td>
+                <td>{{userSession.sessionDate | date : "dd/MM/yyyy 'at' h:mma"}}</td>
             </tr>
         </table>
     </div>
