--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div>
+    <div ng-if="$ctrl.loginError">Login error, check and try again</div>
     <div>
         Username: <input type="text" ng-model="$ctrl.userName"/>
     </div>
